[package]
name = "pdl"
version = "0.1.0"
edition = "2021"
default-run = "pdl"

[workspace]

[features]
default = ["serde"]

[dependencies]
codespan-reporting = "0.11.1"
heck = "0.4.0"
pest = "2.5.5"
pest_derive = "2.5.5"
proc-macro2 = "1.0.46"
quote = "1.0.21"
serde_json = "1.0.86"
argh = "0.1.7"
syn = "1.0.102"

[dependencies.serde]
version = "1.0.145"
features = ["default", "derive", "serde_derive", "std", "rc"]
optional = true

[dev-dependencies]
tempfile = "3.3.0"
bytes = { version = "1.2.1", features = ["serde"] }
num-derive = "0.3.3"
num-traits = "0.2.15"
thiserror = "1.0.37"
paste = "1.0.6"
