[package]
name = "pdl-compiler"
version = "0.1.3"
edition = "2021"
description = "Parser and serializer generator for protocol binary packets"
repository = "https://github.com/google/pdl/"
license = "Apache-2.0"
readme = "README.md"
keywords = ["pdl", "parser", "serializer", "grammar"]
authors = [
    "Henri Chataing <henrichataing@google.com>",
    "David de Jesus Duarte <licorne@google.com>",
    "Martin Geisler <mgeisler@google.com>"
]
exclude = [".github/*", "editors/*"]
categories = ["parsing"]
default-run = "pdlc"

[[bin]]
name = "pdlc"
path = "src/main.rs"

[workspace]

[features]
default = ["serde"]

[dependencies]
codespan-reporting = "0.11.1"
heck = "0.4.0"
pest = "2.5.5"
pest_derive = "2.5.5"
proc-macro2 = "1.0.46"
quote = "1.0.21"
serde_json = "1.0.86"
argh = "0.1.7"
syn = "2.0.16"
prettyplease = "0.2.6"

[dependencies.serde]
version = "1.0.145"
features = ["default", "derive", "serde_derive", "std", "rc"]
optional = true

[dev-dependencies]
tempfile = "3.3.0"
bytes = { version = "1.2.1", features = ["serde"] }
num-derive = "0.3.3"
num-traits = "0.2.15"
thiserror = "1.0.37"
paste = "1.0.6"
googletest = "0.8.0"
