[package]
name = "pdl-compiler-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.pdl-compiler]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "backends_json_generate"
path = "fuzz_targets/backends_json_generate.rs"
test = false
doc = false

[[bin]]
name = "backends_rust_generate"
path = "fuzz_targets/backends_rust_generate.rs"
test = false
doc = false
