[package]
name = "pdl-compiler"
version = "0.4.2"
edition = "2021"
description = "Parser and serializer generator for protocol binary packets"
repository = "https://github.com/google/pdl/"
license = "Apache-2.0"
readme = "../README.md"
keywords = ["pdl", "parser", "serializer", "grammar"]
authors = [
    "Henri Chataing <henrichataing@google.com>",
    "David de Jesus Duarte <licorne@google.com>",
    "Martin Geisler <mgeisler@google.com>",
    "James Eidson <jmes@google.com>",
]
exclude = ["editors/*"]
categories = ["parsing"]
default-run = "pdlc"

[[bin]]
name = "pdlc"
path = "src/main.rs"

[features]
default = ["serde"]
java = ["genco", "once_cell"]

[dependencies]
codespan-reporting = "0.13.1"
heck = "0.4.1"
pest = "2.7.6"
pest_derive = "2.7.6"
proc-macro2 = "1.0.75"
quote = "1.0.36"
serde_json = "1.0.143"
argh = "0.1.12"
syn = "2.0.58"
prettyplease = "0.2.17"
once_cell = { version = "1.21.3", optional = true }
genco = { version = "0.17.10", optional = true }

[dependencies.serde]
version = "1.0.145"
features = ["default", "derive", "serde_derive", "std", "rc"]
optional = true

[dev-dependencies]
tempfile = "3.3.0"
bytes = { version = "1.2.1", features = ["serde"] }
num-derive = "0.3.3"
num-traits = "0.2.15"
thiserror = "1.0.37"
paste = "1.0.6"
googletest = "0.10.0"
