[package]
name = "pdl-derive"
version = "0.3.1"
edition = "2021"
description = "PDL's derive macro"
repository = "https://github.com/google/pdl/"
license = "Apache-2.0"
readme = "../README.md"
keywords = ["pdl", "parser", "serializer", "grammar"]
authors = [
    "Henri Chataing <henrichataing@google.com>",
    "David de Jesus Duarte <licorne@google.com>",
    "Martin Geisler <mgeisler@google.com>"
]
exclude = ["editors/*"]
categories = ["parsing"]

[lib]
name = "pdl_derive"
proc-macro = true

[dependencies]
codespan-reporting = "0.11.1"
pdl-compiler = {path = "../pdl-compiler", version = "0.3.1"}
proc-macro2 = "1.0.66"
quote = "1.0.33"
syn = {version = "2.0.29", features = ["full"]}
termcolor = "1.2.0"

[dev-dependencies]
pdl-runtime = {path = "../pdl-runtime", version = "0.3.1"}
bytes = "1.4.0"
