[package]
name = "pdl-runtime"
version = "0.4.4"
edition = "2024"
rust-version = "1.87"
description = "PDL's runtime library"
repository = "https://github.com/google/pdl/"
license = "Apache-2.0"
readme = "../README.md"
keywords = ["pdl", "parser", "serializer", "grammar"]
authors = [
    "Henri Chataing <henrichataing@google.com>",
    "David de Jesus Duarte <licorne@google.com>",
    "Martin Geisler <mgeisler@google.com>"
]
categories = ["parsing"]

[dependencies]
bytes = "1.7.2"
thiserror = "1.0.49"
