[package]
name = "pdl-tests"
version = "0.0.0"
publish = false
edition = "2021"
description = "PDL Rust generated code tests"

[dependencies]
bytes = "1.4.0"
thiserror = "1.0.47"
pdl-compiler = {path = "../pdl-compiler"}
pdl-runtime = {path = "../pdl-runtime"}
pdl-derive = {path = "../pdl-derive"}
codespan-reporting = "0.11.1"
proc-macro2 = "1.0.66"
quote = "1.0.33"
syn = {version = "2.0.29", features = ["full"]}
termcolor = "1.2.0"
